Add Contact Note to Categories Tag also

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -1253,6 +1253,7 @@ paths:
   /contact/noteTypes:
     get:
       tags:
+        - Categories
         - Contact Note
       summary: Retrieve contact note types
       description: |
